--- a/MilestoneCST-350.csproj
+++ b/MilestoneCST-350.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="ServiceStack" Version="6.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
